# parallel_ANNS

./: .gitignore  CMakeLists.bak.10232020.txt  CMakeLists.txt  LICENSE  README.md
app/: NSG_candidate_distance_step.cpp  NSG_neighbor_distance_step.cpp  NSG_omp_profile_multi_queues.cpp  NSG_omp_profile_multi_queues_LG.cpp  NSG_seq_LG_K_values.cpp  NSG_seq_LG_percentile.cpp  PSS_LG_all_monotonic_bfs_subgraph.cpp  PSS_LG_bfs_nn_subgraph.cpp  PSS_LG_bfs_path_from_17_vertices_w_radius_bound.cpp  PSS_LG_connected_to_nn_all_monotonic_bfs_subgraph.cpp  PSS_LG_in_6_steps_connected_to_nn_all_monotonic_bfs_subgraph.cpp  PSS_LG_mini_cut_bfs_subgraph.cpp  PSS_LG_monotonic_bfs_subgraph.cpp  PSS_LG_parallel_search_path_2_steps_dist_prune.cpp  PSS_LG_parallel_search_path_in_subgraph.cpp  PSS_LG_parallel_search_path_in_subgraph_core_only.cpp  PSS_LG_parallel_search_path_in_subgraph_w_nonmono.cpp  PSS_v5_LG_K_values.cpp  PSS_v5_LG_core_subgraph.cpp  PSS_v5_LG_count_reorder.cpp  PSS_v5_LG_degree_reorder.cpp  PSS_v5_LG_degree_reorder_no_search.cpp  PSS_v5_LG_distance_step.cpp  PSS_v5_LG_distance_threshold_profiling.cpp  PSS_v5_LG_distance_threshold_profiling_no_search.cpp  PSS_v5_LG_in_degree.cpp  PSS_v5_LG_nn_distribution.cpp  PSS_v5_LG_nn_distribution_2_steps_dist_prune.cpp  PSS_v5_LG_percentile.cpp  PSS_v5_LG_separate_search.cpp  PSS_v5_LG_v_counter.cpp  PSS_v5_distance_threshold_profiling.cpp  PSS_v5_distance_threshold_profiling_no_search.cpp  PSS_v5_every_step_merge.bak.cpp  PSS_v5_find_L_every_step_merge.cpp  PSS_v5_find_L_every_step_merge_LG.cpp  PSS_v5_find_L_every_step_merge_LG_for_ratio_1st_half.cpp  PSS_v5_find_L_every_step_merge_L_master_LG.cpp  PSS_v5_find_L_every_step_merge_fixed_local_L_LG.cpp  PSS_v5_find_L_fixed_local_L_update_positions_LG.cpp  (+146 more)
core/: Searching.20191114.2D-vector.bak.cpp  Searching.201911151011.csr-graph.bak.cpp  Searching.201911151011.csr-graph.bak.h  Searching.201911151211.graph_transfer.bak.cpp  Searching.201911151211.graph_transfer.bak.h  Searching.201911151842.opt-graph_bad_parameters.cpp  Searching.201911151842.opt-graph_bad_parameters.h  Searching.201911161030.op-graph_good_parameters.cpp  Searching.201912061447.parallel_in_a_batch.cpp  Searching.201912091448.map_for_queries_ids.cpp  Searching.201912091448.map_for_queries_ids.h  Searching.201912161559.set_for_queue.cpp  Searching.201912161559.set_for_queue.h  Searching.202002181409.local_queue_and_merge.h  Searching.202002201424.parallel_merge_local_queues.h  Searching.202002250815.buckets_equal_width.h  Searching.202003021000.profile_para_top_m_search.h  Searching.202004131634.better_merge.h  Searching.202004131637.better_merge.LG.h  Searching.202005271122.choosing_m.h  Searching.202006191549.nested_parallel.h  Searching.202006222053.subsearch.h  Searching.202007121434.two_queues.bak.h  Searching.202007121434.two_queues.h  Searching.202007270051.subsearch.profile.h  Searching.202007271527.gather_top_m.subsearch.h  Searching.202007271719.gather_top_m.subsearch.profile.h  Searching.202007281116.only_gather_top_m.profile.h  Searching.202007281234.only_gather_top_m.h  Searching.202007291720.hierarchy.h  Searching.202008061153.less_sync.h  Searching.202008062049.computation_quota.bak.h  Searching.202008062049.computation_quota.h  Searching.202008062049.computation_quota.profile.h  Searching.202008090117.interval_merge.h  Searching.202008101718.interval_merge_v2.h  Searching.202008141252.interval_merge_v4.cpp  Searching.202008141252.interval_merge_v4.h  Searching.202008152055.interval_merge_v5.cpp  Searching.202008152055.interval_merge_v5.h  (+145 more)
gpu_faiss/: 1-Flat.cc  4-GPU.cu  CMakeLists.txt
include/: Buckets.h  Candidate.h  Neighbor.h  Runtime.h  Spinlock.h  bitvector.h  definitions.h  papi_panns.h  parallelization.h  pcm_mem.cpp  pcm_mem.h  utils.cpp  utils.h
notes/: pseudo_graphit_for_anns.cpp  pseudo_parallel-search.cpp  pseudo_top_m_by_Ligra.cpp
scripts/: combine_five_cols.py  combine_four_cols.py  combine_two_cols.py  cpuinfo.py  curve_app_seq_searching.sh  curve_engine.sh  curve_profile_para_single_query_top_m_search.sh  load.sh  load.top_m_seq.sh  module_run.py  nsg_simple_profile.sh  output_average.py  output_column_to_row.py  output_element_distance.py  output_find_runtime_above_presicion.py  output_format.py  output_histogram.py  output_local_queues_ends.py  output_maximum.py  output_minimum.py  output_relative_distance.py  output_row_minimum.py  output_rows_to_table.py  output_selected_combine.sh  output_surrounding.py  performance_engine.sh  pitzer.load.curve_middle-M-4.sh  pitzer.load.curve_simple_search.sh  pitzer.load.curve_simple_search_subsearch.sh  pitzer.load.performance_middle-M-4.sh  pitzer.load.performance_sequential_merge.sh  pitzer.load.sh  profile.pitzer.profile_para_simple_search.subsearch.sh  profile.pitzer.profile_para_top_m.dist_threshold.sh  profile.pitzer.profile_para_top_m.middle-m-4.cache_miss.sh  profile.pitzer.profile_para_top_m.middle-m-4.sh  profile.pitzer.profile_para_top_m.nested_batch_size.sh  profile.pitzer.profile_para_top_m.selecting_out.sh  profile.pitzer.profile_para_top_m.sequential_merge.sh  profile_value_m.py  (+75 more)
tools/: bfs_test_nsg.cpp  check_true_nn.cpp  convert_bvecs_to_fvecs.cpp  get_mini_cut.py  get_mini_cut_duplicate_vertex.py  plot_all_monotonic_subfig.py  plot_connected_to_nn_all_monotonic_subfig.py  plot_graph.py  plot_in_6_steps_connected_to_nn_all_monotonic_subfig.py  plot_mini_cut_and_connected_to_nn_all_monotonic_subfig.py  plot_parallel_search_path_in_subgraph.py  plot_parallel_search_path_in_subgraph_core_only.py  plot_parallel_search_path_in_subgraph_w_nonmono.py  plot_shortest_path_subfig.py  save_true_nearest_neighbors.bak.cpp  save_true_nearest_neighbors.cpp  test.true_NN.cpp  test_compare_groundtruth_and_true_nn.cpp  test_nsg_index.cpp  test_nsg_index_findroot.cpp  test_nsg_index_for_bvecs.cpp  test_nsg_optimized_search.bak.cpp  test_nsg_optimized_search.cpp  test_nsg_optimized_search_para.cpp  test_nsg_search.cpp  widget_get_deep200M.cpp  widget_get_fake_reorder_map.cpp  widget_get_sift100M.cpp  widget_neighbors_distance_distribution.cpp  (+1 more)
(+613 files in other folders)
